Improve Smart Pantry coverage, tests, and CI configuration